--- a/app/views/home/_question.html.erb
+++ b/app/views/home/_question.html.erb
@@ -27,6 +27,7 @@ asked
 <%= answer.User.email %>
 answered
 <%= answer.content %>
+<%= link_to 'Upvote', url_for(controller: 'upvote_answers', action: 'toggle_upvote', answer_id: answer.id), method: :post %>
 <br>
 
 <% end %>
