--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,10 +5,48 @@
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
+
+
 </head>
 <body>
-<p class="notice"><%= notice %></p>
-       <p class="alert"><%= alert %></p>
+<% if notice %>
+<script type="text/javascript">
+	noty({text: '<%= notice %>', type: 'alert'});
+</script>
+
+<% end %>
+
+
+<% if alert %>
+
+<script type="text/javascript">
+	noty({text: '<%= alert %>', type: 'error'});
+</script>
+<% end %>
+ 
+
+
+ <% if user_signed_in? %>
+<header>
+
+<div class="logo">
+<%= image_tag 'image.png' %>
+</div>
+
+
+<nav>
+
+<ul>
+<li> My profile </li>
+<li>  <%= link_to "Sign Out",destroy_user_session_path,method: :delete %></li>
+</ul>
+</nav>
+
+
+</header>
+
+
+ <% end %>
 <%= yield %>
 
 </body>
