--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -1,3 +1,47 @@
 // Place all the styles related to the Home controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+header {
+    height: 35px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background-color: white;
+    border-bottom: 1px solid grey;
+    div.logo {
+        img {
+        	height: 32px;
+        	padding-left:40px;	
+        }
+    }
+
+    nav {
+    	ul{
+    		display: flex;
+    		li{
+    			list-style: none;
+    			margin-right: 10px;
+    		}
+    	}
+    }
+}
+
+
+main
+{
+	display: flex;
+	flex-direction: row;
+	  div#leftMain
+	  {
+	  	width: 20%;
+	  }
+	  div#middleMain
+	  {
+	  	width: 60%;
+	  }
+	    div#rightMain
+	  {
+	  	width: 20%;
+	  }
+}
+
