--- a/app/views/home/mainPage.html.erb
+++ b/app/views/home/mainPage.html.erb
@@ -23,13 +23,13 @@
 <div class ="createQuestion">
 	<%= form_for @question, remote: true do |f| %>
 
-<%= f.label :content %> <br>
+<br>
 <%= f.text_area :content %>  <br>
 
-<%= f.label :subject %> <br>
-<%= f.text_area :question %>  <br>
+
 <%= f.label "Ask anonymous" %> 
 <%= f.check_box :anonymous, {}, true, false %> 
+&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 <%= f.submit  %>
 
 <% end %>
@@ -39,6 +39,13 @@
 <%  @questions.each do |question| 
 	%>
 
+
+
+
+
+
+
+<div class ="question">
 <% if question.anonymous %>
 Anonymous 
 <% else %>
@@ -71,7 +78,37 @@ answered
 <br>
 
 <% end %>
+
+</div>
 	<% end %>
+	
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 	</div>
 
 
